Starting teams view. Fixed 6* spacing css

--- a/herders/static/herders/css/custom.css
+++ b/herders/static/herders/css/custom.css
@@ -145,7 +145,7 @@ body {
 }
 
 .monster-image .monster-star-6 {
-    left: 30px;
+    left: 31px;
 }
 
 
